[package]
name = "nebula-client"
version = "0.1.0"
authors = ["Andy Bell <andy.bell@displaynote.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.10.1"
url = "2.1.0"
nebula-mp4 = { path = "../nebula-mp4" }