[package]
name = "nebula-server"
version = "0.1.0"
authors = ["Andrew Bell <andy.bell@displaynote.com>"]
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"
tungstenite = "0.10.1"
crossbeam-channel = "0.4"
ffmpeg4-ffi = { git = "https://github.com/andyjsbell/ffmpeg4-ffi-rust.git" }

[build-dependencies]
cc = "1.0"