[package]
name = "nebula-wasm"
version = "0.1.0"
authors = ["Andy Bell <andy.bell@displaynote.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
# repository = "https://github.com/yourgithubusername/hello-wasm"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.58"

[dependencies.web-sys]
version = "0.3.22"
features = [
  "ErrorEvent",
  "MessageEvent",
  "WebSocket",
]
